Bug 381914 - Double clinking with the shape editing tool outside the path doesn't deselect nor go to the select shapes
Summary: Double clinking with the shape editing tool outside the path doesn't deselect...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 15:32 UTC by wolthera
Modified: 2018-02-20 14:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 15:32:25 UTC
I keep pressing on the empty space to deselect my nodes, so I can see the path without the nodes editing GUI. Maybe doubleclicking outside should deselect or at the least go back to the select shapes tool?
Comment 1 Dmitry Kazakov 2018-02-20 10:44:56 UTC
Okay, right now we have the following UIX:

If shape editing tool is "temporarily" activated from within shape selection tool (by either double-clicking or pressing Enter key), then double-clicking or pressing Enter exits editing "mode" and returns back to the selection tool.

If the tool was activated not temporarily, but using the toolbox, the switch doesn't happen (and that was done intentionally)

I'd say we need the following requirements:

1) Double-clicking and Enter work as they work right now (not exit if activation is not temporary)
2) Clicking or double-clicking outside the shape should deselect the shape (depending on the tool activation mode)
Comment 2 Dmitry Kazakov 2018-02-20 14:20:43 UTC
Git commit c90c1cc1cedaf837c1231ba9c6ddb5e4b1eedb92 by Dmitry Kazakov.
Committed on 20/02/2018 at 14:13.
Pushed by dkazakov into branch 'master'.

Make Shape Editing Tool to deselect a shape when a double-click on empty area

The patch also disables adding a new node on double-clicking
on an existing node :)

M  +6    -3    libs/flake/KoToolManager.cpp
M  +20   -5    libs/flake/tools/KoPathTool.cpp

https://commits.kde.org/krita/c90c1cc1cedaf837c1231ba9c6ddb5e4b1eedb92