Make Shape Editing Tool to deselect a shape when a double-click on empty area

The patch also disables adding a new node on double-clicking
on an existing node :)

BUG:381914